# cursor-transcript-rag

./: .env.example  .gitignore  PORTING.md  QUICKSTART.md  README.md  pyproject.toml
adapters/cursor_transcripts/: __init__.py  transcript_adapter.py  transcript_scanner.py
cursor-integration/commands/: rag-command.md
cursor-integration/rules/: conversation-rag.mdrule
examples/: README.md  sample_manual_import.json  sample_transcript.jsonl
mcp-server/: pyproject.toml  server.py  tools.py
scripts/: ingest_transcripts.py  rebuild_index.py  setup.py  test_embeddings.py  test_retrieval.py  verify_adapter.py
